src/objects/Factory_Pricing_Authorization__c.object
<CustomObject>
    <fields>
        <fullName>Add_to_McQuary_Tools__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add to  Daikin Tools</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Engineer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FPAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Level__c</fullName>
        <label>Approval Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attention__c</fullName>
        <label>Attention</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Average_List_Price_Markup__c</fullName>
        <label>Average List Price Markup</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_Unit_to_be_Modified__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Format</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product__c.IsActive__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>FPAs</relationshipLabel>
        <relationshipName>FPAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cost_unit__c</fullName>
        <label>Cost</label>
        <summarizedField>FPA_Link__c.Item_Cost__c</summarizedField>
        <summaryForeignKey>FPA_Link__c.FPA__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Costt__c</fullName>
        <label>Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <formula>DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discreet_Identifier__c</fullName>
        <label>Discrete Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eng_Mfg_Effort__c</fullName>
        <label>Eng/Mfg Effort</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                    <default>true</default>
                    <label>Low</label>
                </value>
                <value>
                    <fullName>Very Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Entry_Date__c</fullName>
        <label>Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FPATotalDraftingHours__c</fullName>
        <label>FPATotalDraftingHours</label>
        <summarizedField>FPA_Link__c.FPA_Total_Drafting_Hours__c</summarizedField>
        <summaryForeignKey>FPA_Link__c.FPA__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FPATotalEngineeringHours__c</fullName>
        <label>FPATotalEngineeringHours</label>
        <summarizedField>FPA_Link__c.FPA_Total_Engineering_Hours__c</summarizedField>
        <summaryForeignKey>FPA_Link__c.FPA__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FPATotalManufacturingHours__c</fullName>
        <label>FPATotalManufacturingHours</label>
        <summarizedField>FPA_Link__c.FPA_Total_Manufacturing_Hours__c</summarizedField>
        <summaryForeignKey>FPA_Link__c.FPA__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FPA_Number_Id__c</fullName>
        <formula>FPA_Number__c  &amp;  Version__c</formula>
        <label>FPA Number Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FPA_Number__c</fullName>
        <label>FPA Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <formula>Sales_Person__r.Fax__c</formula>
        <label>Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fixed_Unit_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Sum of Estimates Fixed Unit Cost</inlineHelpText>
        <label>Fixed Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Internal_Notes__c</fullName>
        <label>Internal Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <label>Item</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_ID__c</fullName>
        <label>Job ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Time_wks__c</fullName>
        <defaultValue>8</defaultValue>
        <label>Lead Time(wks)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>List_Cost__c</fullName>
        <formula>0</formula>
        <label>List Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Margin__c</fullName>
        <formula>Net_Price__c  -  Cost_unit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marginn__c</fullName>
        <formula>Margin__c  /  Net_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MaxTotalMaterialCostforSingleLine__c</fullName>
        <label>MaxTotalMaterialCostforSingleLine</label>
        <summarizedField>FPA_Link__c.Max_Total_Material_Cost_for_Single_Line__c</summarizedField>
        <summaryForeignKey>FPA_Link__c.FPA__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Max_QTY_of_Units_On_Single_Line_Item__c</fullName>
        <label>Max QTY of Units On Single Line Item</label>
        <summarizedField>FPA_Link__c.Quantity__c</summarizedField>
        <summaryForeignKey>FPA_Link__c.FPA__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Max_Total_Drafting_Hours_per_Single_line__c</fullName>
        <label>Max Total Drafting Hours per Single line</label>
        <summarizedField>FPA_Link__c.FPA_Total_Drafting_Hours__c</summarizedField>
        <summaryForeignKey>FPA_Link__c.FPA__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Max_Total_Engineering_Hours_for_Single__c</fullName>
        <label>Max Total Engineering Hours for Single</label>
        <summarizedField>FPA_Link__c.FPA_Total_Engineering_Hours__c</summarizedField>
        <summaryForeignKey>FPA_Link__c.FPA__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Max_Total_Manufacturing_Hours_for_Single__c</fullName>
        <label>Max Total Manufacturing Hours for Single</label>
        <summarizedField>FPA_Link__c.FPA_Total_Manufacturing_Hours__c</summarizedField>
        <summaryForeignKey>FPA_Link__c.FPA__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Modifier_location__c</fullName>
        <label>Modifier Name(s)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multiplier__c</fullName>
        <defaultValue>0.30</defaultValue>
        <label>Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Price__c</fullName>
        <formula>T_List_Price__c  *  Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Office_Name__c</fullName>
        <label>Office Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the sales rep office</inlineHelpText>
        <label>Rep Office</label>
        <referenceTo>Office__c</referenceTo>
        <relationshipLabel>FPAs</relationshipLabel>
        <relationshipName>FPAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PCL__c</fullName>
        <label>PCL</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_FPA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent FPA</label>
        <referenceTo>Factory_Pricing_Authorization__c</referenceTo>
        <relationshipLabel>Related Versions</relationshipLabel>
        <relationshipName>FPAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Sales_Person__r.Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTY_of_line_Item_with_Specials__c</fullName>
        <label>QTY of line Item with Specials</label>
        <summarizedField>FPA_Link__c.Quantity__c</summarizedField>
        <summaryForeignKey>FPA_Link__c.FPA__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Item Quantity</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Repeatability__c</fullName>
        <label>Repeatability</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unlikely</fullName>
                </value>
                <value>
                    <fullName>Likely</fullName>
                </value>
                <value>
                    <fullName>Certain</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Req_Ship__c</fullName>
        <inlineHelpText>Required Shipment date</inlineHelpText>
        <label>Req Ship</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <label>Revenue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low to High</fullName>
                    <default>true</default>
                    <label>Low to High</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risk_Mitigation_Plan__c</fullName>
        <label>Risk Mitigation Plan</label>
        <length>32760</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk__c</fullName>
        <label>Risk</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                    <default>true</default>
                    <label>Low</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFO_Fixed_Unit_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Sum of SFO&apos;s Fixed Unit Cost</inlineHelpText>
        <label>SFOs Fixed Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SFO_Variable_Unit_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Sum of SFO&apos;s Variable Unit Cost</inlineHelpText>
        <label>SFOs Variable Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SO_Number__c</fullName>
        <label>SO Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Person_Name__c</fullName>
        <label>Sales Person Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the appropriate Rep</inlineHelpText>
        <label>Sales Person</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Office__c</field>
                <operation>equals</operation>
                <valueField>FPA_Persona__c.Office__r.Id</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>FPA_Persona__c</referenceTo>
        <relationshipLabel>FPAs</relationshipLabel>
        <relationshipName>FPAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
                <value>
                    <fullName>Non Bid Process</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                    <isActive>false</isActive>
                    <label>Pending</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted__c</fullName>
        <inlineHelpText>FPA Submitted date</inlineHelpText>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>T_List_Price__c</fullName>
        <label>List Price</label>
        <summarizedField>FPA_Link__c.List_Price__c</summarizedField>
        <summaryForeignKey>FPA_Link__c.FPA__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <label>Total Cost</label>
        <summarizedField>FPA_Link__c.Total_Cost__c</summarizedField>
        <summaryForeignKey>FPA_Link__c.FPA__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_List_Price__c</fullName>
        <label>Total List Price</label>
        <summarizedField>FPA_Link__c.Total_List_Price__c</summarizedField>
        <summaryForeignKey>FPA_Link__c.FPA__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Margin__c</fullName>
        <label>Total Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Margind__c</fullName>
        <formula>Total_Net_Price__c  -  Total_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Margin $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Marginp__c</fullName>
        <formula>Total_Margind__c  /  Total_Net_Price__c</formula>
        <label>Total Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Net_Price__c</fullName>
        <formula>Total_List_Price__c  *  Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Net Price</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>FPA</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>FPA_Number__c</columns>
        <columns>Office__c</columns>
        <columns>Sales_Person__c</columns>
        <columns>Quantity__c</columns>
        <columns>Status__c</columns>
        <columns>Base_Unit_to_be_Modified__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Approved_FPA_s</fullName>
        <columns>NAME</columns>
        <columns>FPA_Number__c</columns>
        <columns>Office__c</columns>
        <columns>Sales_Person__c</columns>
        <columns>Quantity__c</columns>
        <columns>Status__c</columns>
        <columns>Base_Unit_to_be_Modified__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>Approved FPA&apos;s</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Draft_FPA_s</fullName>
        <columns>NAME</columns>
        <columns>FPA_Number__c</columns>
        <columns>Office__c</columns>
        <columns>Sales_Person__c</columns>
        <columns>Quantity__c</columns>
        <columns>Status__c</columns>
        <columns>Base_Unit_to_be_Modified__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <label>Draft FPA&apos;s</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Non_Bid_Process_FPA_s</fullName>
        <columns>NAME</columns>
        <columns>FPA_Number__c</columns>
        <columns>Office__c</columns>
        <columns>Sales_Person__c</columns>
        <columns>Quantity__c</columns>
        <columns>Status__c</columns>
        <columns>Base_Unit_to_be_Modified__c</columns>
        <columns>Created_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Non Bid Process</value>
        </filters>
        <label>Non Bid Process FPA&apos;s</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Rejected_FPA_s</fullName>
        <columns>NAME</columns>
        <columns>FPA_Number__c</columns>
        <columns>Office__c</columns>
        <columns>Sales_Person__c</columns>
        <columns>Quantity__c</columns>
        <columns>Status__c</columns>
        <columns>Base_Unit_to_be_Modified__c</columns>
        <columns>Created_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>Rejected FPA&apos;s</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Today_Submitted</fullName>
        <columns>NAME</columns>
        <columns>FPA_Number__c</columns>
        <columns>Office__c</columns>
        <columns>Sales_Person__c</columns>
        <columns>Quantity__c</columns>
        <columns>Status__c</columns>
        <columns>Base_Unit_to_be_Modified__c</columns>
        <columns>Created_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Submitted__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today Submitted</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FPAs</pluralLabel>
    <recordTypes>
        <fullName>Factory_Price_Authorization</fullName>
        <active>true</active>
        <label>Factory Price Authorization</label>
    </recordTypes>
    <recordTypes>
        <fullName>Read_only</fullName>
        <active>true</active>
        <label>Read only</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Negative_Quantity</fullName>
        <active>true</active>
        <errorConditionFormula>Quantity__c  &lt; 0</errorConditionFormula>
        <errorDisplayField>Quantity__c</errorDisplayField>
        <errorMessage>Quantity can not be negative</errorMessage>
    </validationRules>
</CustomObject>